--- a/kube/ingress.yaml
+++ b/kube/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: podinfo-ingress
-  namespace: a-team
+  namespace: a-benz-schalung
 spec:
   ingressClassName: nginx
   rules:
