--- a/kube/ingress-dev.yaml
+++ b/kube/ingress-dev.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: pod-info.k8s.schoeppi5.de
+  - host: podinfo.k8s.schoeppi5.de
     http:
       paths:
       - path: /
