--- a/kube/ingress-prod.yaml
+++ b/kube/ingress-prod.yaml
@@ -11,6 +11,13 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Exact
+        backend:
+          service:
+            name: a-podinfo-prod
+            port:
+              number: 80
+      - path: /api/info
         pathType: Prefix
         backend:
           service:
